--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ nav .wrapper{
   opacity: 0;
   visibility: hidden;
   box-shadow: 0 6px 10px rgba(0,0,0,0.15);
+  text-align: center;
 }
 .nav-links li:hover .drop-menu,
 .nav-links li:hover .mega-box{
@@ -82,6 +83,7 @@ nav .wrapper{
   top: 85px;
   opacity: 0;
   visibility: hidden;
+  text-align: center;
 }
 .mega-box .content{
   background: #242526;
