--- a/style2.css
+++ b/style2.css
@@ -15,15 +15,17 @@ p,span{
     font-size: 1.5rem;
     text-shadow: 2px 2px 2px blue;
     text-align: center;
+    padding-right: 3em;
 }
 /* From uiverse.io by @adamgiebl */
 button {
-       margin-bottom: 25%;
+       margin-bottom: 20%;
        --green: #1BFD9C;
        font-size: 15px;
        padding: 0.7em 2.7em;
        letter-spacing: 0.06em;
        position: relative;
+       top: 2em;
        font-family: inherit;
        border-radius: 0.6em;
        overflow: hidden;
@@ -50,6 +52,9 @@ button {
        transition: transform .4s ease-in-out;
        background: linear-gradient(to right, transparent 1%, rgba(27, 253, 156, 0.1) 40%,rgba(27, 253, 156, 0.1) 60% , transparent 100%);
       }
+      img{
+       padding-bottom: 3em;
+      }
 
       @media (max-width: 600px){
        
@@ -57,7 +62,7 @@ button {
               
               position: absolute;
               padding-left: 4em;
-              padding-top: 50%;
+              padding-top: 35%;
               background-color: darkgrey;
               
               
@@ -65,16 +70,17 @@ button {
        
        p,span{
            font-family: Verdana, Geneva, Tahoma, sans-serif;
-           font-size: 1.5rem;
+           font-size: 1.2rem;
            text-shadow: 2px 2px 2px blue;
            text-align: center;
-           padding-top: 15%;
+           padding-top: 11%;
+           display: inline flexbox;
            
            
        }
        /* From uiverse.io by @adamgiebl */
        button {
-              margin-bottom: 18%;
+              margin-bottom: 7em;
               left: 3em;
               --green: #1BFD9C;
               font-size: 15px;
@@ -110,7 +116,7 @@ button {
              
               img {
               padding-left: 30%;
-              display: flexbox;
+              display: flex;
 
              } 
       }
